# TwoFifty-Backend

./: .gitattributes  .gitignore  Procfile  README.md  TwoFifty-Backend.cabal  stack.yaml
public/: Main.js  Main.min.js  help.html  index.html  sql-server.txt  test.html
src/: Bid.hs  Card.hs  Game.hs  Lib.hs  PlayedCard.hs  Player.hs  SelectionData.hs  SharedData.hs  State.hs
