name:                TwoFifty-Backend
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/TwoFifty-Backend#readme
license:             BSD3
license-file:        LICENSE
author:              Anurag Ohri
maintainer:          anuragohri92@gmail.com
copyright:           2020 Anurag Ohri
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Card
                     , Player
                     , SharedData
                     , State
                     , Game
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , directory
                     , random
                     , servant-server
                     , servant-websockets
                     , text
                     , wai
                     , warp
                     , websockets
  default-language:    Haskell2010

executable TwoFifty-Backend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TwoFifty-Backend
  default-language:    Haskell2010

test-suite TwoFifty-Backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TwoFifty-Backend
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/TwoFifty-Backend
